--- a/template/registrations.html
+++ b/template/registrations.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="container-fluid">
         <div class="form_body">
-            <h1 class="text-center">Welcome To BAUET Blood Bank...</h1>
+            <h1 class="text-center">Welcome To PRC Blood Bank...</h1>
             <br>
             <h2 class="text-center">Details about {{forms.name.data}}</h2>
 
@@ -12,7 +12,7 @@
                 <p><strong>Name:</strong> {{forms.name.data}}</p>
                 <p><strong>Gender:</strong> {{forms.gender.data}}</p>
                 <p><strong>Date Of Birth:</strong> {{forms.date_of_birth.data}}</p>
-                <p><strong>Blood Group:</strong> <span class="text-uppercase">{{forms.blood_group.data}}</span></p>
+                <p><strong>Blood Type:</strong> <span class="text-uppercase">{{forms.blood_group.data}}</span></p>
                 <p><strong>Phone Number:</strong> {{forms.phone_number.data}}</p>
                 <p><strong>Email:</strong> {{forms.email.data}}</p>
                 <p><strong>Occupation:</strong> {{forms.occupation.data}}</p>
